--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "resturant-backend-task",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "Restaurant Backend API",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.14.0",
