--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 # MONGO_URI=mongodb://127.0.0.1:27017/Restaurant-Backend
-MONGO_URI=mongodb://mongo:RJwrjNzqDSdAPGjrMQBXXFRkWCGVKkVy@mongodb.railway.internal:27017
+MONGO_URI=mongodb://mongo:RJwrjNzqDSdAPGjrMQBXXFRkWCGVKkVy@monorail.proxy.rlwy.net:30573
 JWT_SECRET=my_secret_key
 NODE_ENV=development
